add Products - update
