# internals/model/products/products.go
@@ -6,3 +6,18 @@ type Request struct {
 	Qty    int32
 	Token  string
 }
+
+type FitterUpdateProducts struct {
+	Name      string
+	Detail    string
+	QtyUpdate int32
+	Id        int32
+	Token     string
+}
+
+type UpdateResponseProducts struct {
+	Name   string
+	Detail string
+	Qty    int32
+	Id     int32
+}
